<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">bigUP</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_send_big_up">SendBigUpActivity</string>
    <string name="title_activity_streaming">StreamingActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_leaderboard">LeaderboardActivity</string>

    <string name="button_send">^BU</string>
    <string name="button_stream">ST</string>
    <string name="button_my">ME</string>
    <string name="button_leaderboard">LB</string>
    <string name="button_home">Home</string>
</resources>
